add docker login action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,4 +19,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-     
+      - name: Login Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{secrets:GH_USERNAME}}
+          password: ${{secrets:GH_TOKEN}}
