--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Login Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets:GH_USERNAME }}
+          username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_TOKEN }}
