--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Login Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_TOKEN }}
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+            dotnet-version: 6.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
         id: buildx
