--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,20 +24,18 @@ jobs:
         with:
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_TOKEN }}
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-            dotnet-version: 6.0.x
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        id: buildx
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         id: docker_build
         with:
-          context: ./
+          context: .
           file: ./DemoApi/DemoApi/Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ secrets.GH_USERNAME }}/demoapi
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
