Fix build docker

--- a/DemoApi/DemoApi/Dockerfile
+++ b/DemoApi/DemoApi/Dockerfile
@@ -6,7 +6,7 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["DemoApi/DemoApi/DemoApi.csproj", "DemoApi/"]
+COPY ["DemoApi/DemoApi.csproj", "DemoApi/"]
 RUN dotnet restore "DemoApi/DemoApi.csproj"
 COPY . .
 WORKDIR "/src/DemoApi"
