--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_TOKEN }}
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
@@ -34,8 +37,8 @@ jobs:
         uses: docker/build-push-action@v2
         id: docker_build
         with:
-          context: .
-          file: ./DemoApi/DemoApi/Dockerfile
+          context: DemoApi
+          file: ./DemoApi/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
